--- a/rottenpotatoes/Gemfile
+++ b/rottenpotatoes/Gemfile
@@ -14,11 +14,15 @@ group :development, :test do
   gem 'launchy'
   gem 'rspec-rails', '3.7.2'
   gem 'ZenTest', '4.3.0'
+  gem 'factory_bot'
+  gem 'factory_bot_rails'
+  gem 'simplecov', :require => false
 end
 
 group :test do
   gem 'cucumber-rails', :require => false
   gem 'cucumber-rails-training-wheels'
+  gem 'simplecov', :require => false
 end
 group :production do
   gem 'pg'
